--- a/index.html
+++ b/index.html
@@ -4,19 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="stylesheet" href="./style/styles.css" />
   </head>
   <body>
+    <!-- =============HEADER=============== -->
+
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="/">Studio</a></li>
-          <li><a href="/">Portfolio</a></li>
-          <li><a href="/">Contacts</a></li>
+        <a href="./index.html" class="header-logo"
+          >Web<span class="header-logo-span">Studio</span></a
+        >
+        <ul class="header-menu">
+          <li><a href="/" class="list-menu-item">Studio</a></li>
+          <li><a href="/" class="list-menu-item">Portfolio</a></li>
+          <li><a href="/" class="list-menu-item">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="header-menu-contacts">
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -26,39 +45,42 @@
         </ul>
       </address>
     </header>
+
+    <!-- ===========main content========== -->
+
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="head-title-section">
+        <h1 class="head-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="btn">Order Service</button>
       </section>
 
       <section>
         <h2 hidden>(2nd section)</h2>
-        <ul>
+        <ul class="main-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="main-list-item section-subtitle">Strategy</h3>
+            <p class="main-list-item-text subtitle-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="main-list-item section-subtitle">Punctuality</h3>
+            <p class="main-list-item-text subtitle-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="main-list-item section-subtitle">Diligence</h3>
+            <p class="main-list-item-text subtitle-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="main-list-item section-subtitle">Technologies</h3>
+            <p class="main-list-item-text subtitle-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -66,56 +88,96 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="section-team">
+        <h2 class="users-subtitle section-title">Our Team</h2>
+        <ul class="users-list">
+          <li class="user">
             <img
+              class="img-user"
               src="./images/img_1.jpg"
               alt="Mark_Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="user-name section-subtitle">Mark Guerrero</h3>
+            <p class="user-text subtitle-text">Product Designer</p>
           </li>
-          <li>
+          <li class="user">
             <img
+              class="img-user"
               src="./images/img_2.jpg"
               alt="Tom_Fort"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="user-name section-subtitle">Tom Ford</h3>
+            <p class="user-text subtitle-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="user">
             <img
+              class="img-user"
               src="./images/img_3.jpg"
               alt="Camilla_Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="user-name section-subtitle">Camila Garcia</h3>
+            <p class="user-text subtitle-text">Marketing</p>
           </li>
 
-          <li>
+          <li class="user">
             <img
+              class="img-user"
               src="./images/img_4.jpg"
               alt="D_Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="user-name section-subtitle">Daniel Wilson</h3>
+            <p class="user-text subtitle-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 class="head-section">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="/images/img-5.jpg" alt="banking-app" />
+            <h3>Banking app</h3>
+            <p>app</p>
+          </li>
+          <li>
+            <img src="./images/img-6.jpg" alt="marketing-img" />
+            <h3>Cashless Payment</h3>
+            <p class="subtitle-text">Marketing</p>
+          </li>
+          <li>
+            <img src="/images/img-7.jpg" alt="meditation-app" />
+            <h3>Meditation app</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="images/img-8.jpg" alt="taxi-car" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="images/img-9.jpg" alt="screen-illustrations" />
+            <h3>Screen Illustrations</h3>
+            <p>Desighn</p>
+          </li>
+          <li>
+            <img src="images/img-10.jpg" alt="marketing-courses" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
