--- a/index.html
+++ b/index.html
@@ -37,10 +37,16 @@
       <address>
         <ul class="header-menu-contacts">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a
+              class="header-menu-contacts-item"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="header-menu-contacts-item" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -140,43 +146,85 @@
       </section>
 
       <section>
-        <h2 class="head-section">Our Portfolio</h2>
+        <h2 class="section-title-portfolio section-title">Our Portfolio</h2>
         <ul>
           <li>
-            <img src="/images/img-5.jpg" alt="banking-app" />
-            <h3>Banking app</h3>
-            <p>app</p>
+            <img
+              class="portfolio-img"
+              src="/images/img-5.jpg"
+              alt="banking-app"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle section-subtitle">Banking app</h3>
+            <p class="portfolio-subtitle subtitle-text">app</p>
           </li>
           <li>
-            <img src="./images/img-6.jpg" alt="marketing-img" />
-            <h3>Cashless Payment</h3>
-            <p class="subtitle-text">Marketing</p>
+            <img
+              class="portfolio-img"
+              src="./images/img-6.jpg"
+              alt="marketing-img"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle section-subtitle">
+              Cashless Payment
+            </h3>
+            <p class="portfolio-subtitle subtitle-text">Marketing</p>
           </li>
           <li>
-            <img src="/images/img-7.jpg" alt="meditation-app" />
-            <h3>Meditation app</h3>
-            <p>App</p>
+            <img
+              class="portfolio-img"
+              src="/images/img-7.jpg"
+              alt="meditation-app"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle section-subtitle">Meditation app</h3>
+            <p class="portfolio-subtitle subtitle-text">App</p>
           </li>
           <li>
-            <img src="images/img-8.jpg" alt="taxi-car" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <img
+              class="portfolio-img"
+              src="images/img-8.jpg"
+              alt="taxi-car"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle section-subtitle">Taxi Service</h3>
+            <p class="portfolio-subtitle subtitle-text">Marketing</p>
           </li>
           <li>
-            <img src="images/img-9.jpg" alt="screen-illustrations" />
-            <h3>Screen Illustrations</h3>
-            <p>Desighn</p>
+            <img
+              class="portfolio-img"
+              src="images/img-9.jpg"
+              alt="screen-illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle section-subtitle">
+              Screen Illustrations
+            </h3>
+            <p class="portfolio-subtitle subtitle-text">Desighn</p>
           </li>
           <li>
-            <img src="images/img-10.jpg" alt="marketing-courses" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <img
+              class="portfolio-img"
+              src="images/img-10.jpg"
+              alt="marketing-courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle section-subtitle">Online Courses</h3>
+            <p class="portfolio-subtitle subtitle-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a class="header-logo" href="./index.html"
+        >Web<span class="footer-accent">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
