--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="/" class="list-menu-item">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="header-menu-address">
         <ul class="header-menu-contacts">
           <li>
             <a
