--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./style/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <!-- =============HEADER=============== -->
