--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           >Web<span class="header-logo-span">Studio</span></a
         >
         <ul class="header-menu">
-          <li><a href="/" class="list-menu-item">Studio</a></li>
-          <li><a href="/" class="list-menu-item">Portfolio</a></li>
-          <li><a href="/" class="list-menu-item">Contacts</a></li>
+          <li><a href="./index.html" class="list-menu-item">Studio</a></li>
+          <li><a href="" class="list-menu-item">Portfolio</a></li>
+          <li><a href="" class="list-menu-item">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-menu-address">
@@ -97,10 +97,10 @@
       <section class="section-team">
         <h2 class="users-subtitle section-title">Our Team</h2>
         <ul class="users-list">
-          <li class="user">
+          <li class="user-des">
             <img
-              class="img-user"
               src="./images/img_1.jpg"
+              class="img-user-des"
               alt="Mark_Guerrero"
               width="264"
               height="260"
@@ -108,10 +108,10 @@
             <h3 class="user-name section-subtitle">Mark Guerrero</h3>
             <p class="user-text subtitle-text">Product Designer</p>
           </li>
-          <li class="user">
+          <li class="user-front">
             <img
-              class="img-user"
               src="./images/img_2.jpg"
+              class="img-user-front"
               alt="Tom_Fort"
               width="264"
               height="260"
@@ -119,10 +119,10 @@
             <h3 class="user-name section-subtitle">Tom Ford</h3>
             <p class="user-text subtitle-text">Frontend Developer</p>
           </li>
-          <li class="user">
+          <li class="user-market">
             <img
-              class="img-user"
               src="./images/img_3.jpg"
+              class="img-user-market"
               alt="Camilla_Garcia"
               width="264"
               height="260"
@@ -131,10 +131,10 @@
             <p class="user-text subtitle-text">Marketing</p>
           </li>
 
-          <li class="user">
+          <li class="user-ui">
             <img
-              class="img-user"
               src="./images/img_4.jpg"
+              class="img-user-ui"
               alt="D_Wilson"
               width="264"
               height="260"
@@ -150,8 +150,8 @@
         <ul>
           <li>
             <img
-              class="portfolio-img"
               src="/images/img-5.jpg"
+              class="portfolio-img"
               alt="banking-app"
               width="360"
               height="300"
@@ -161,8 +161,8 @@
           </li>
           <li>
             <img
-              class="portfolio-img"
               src="./images/img-6.jpg"
+              class="portfolio-img"
               alt="marketing-img"
               width="360"
               height="300"
@@ -174,8 +174,8 @@
           </li>
           <li>
             <img
-              class="portfolio-img"
               src="/images/img-7.jpg"
+              class="portfolio-img"
               alt="meditation-app"
               width="360"
               height="300"
@@ -185,8 +185,8 @@
           </li>
           <li>
             <img
-              class="portfolio-img"
               src="images/img-8.jpg"
+              class="portfolio-img"
               alt="taxi-car"
               width="360"
               height="300"
@@ -196,8 +196,8 @@
           </li>
           <li>
             <img
-              class="portfolio-img"
               src="images/img-9.jpg"
+              class="portfolio-img"
               alt="screen-illustrations"
               width="360"
               height="300"
@@ -209,8 +209,8 @@
           </li>
           <li>
             <img
-              class="portfolio-img"
               src="images/img-10.jpg"
+              class="portfolio-img"
               alt="marketing-courses"
               width="360"
               height="300"
