--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <ul>
           <li>
             <img
-              src="/images/img-5.jpg"
+              src="./images/img-5.jpg"
               class="portfolio-img"
               alt="banking-app"
               width="360"
@@ -174,7 +174,7 @@
           </li>
           <li>
             <img
-              src="/images/img-7.jpg"
+              src="./images/img-7.jpg"
               class="portfolio-img"
               alt="meditation-app"
               width="360"
@@ -185,7 +185,7 @@
           </li>
           <li>
             <img
-              src="images/img-8.jpg"
+              src="./images/img-8.jpg"
               class="portfolio-img"
               alt="taxi-car"
               width="360"
@@ -196,7 +196,7 @@
           </li>
           <li>
             <img
-              src="images/img-9.jpg"
+              src="./images/img-9.jpg"
               class="portfolio-img"
               alt="screen-illustrations"
               width="360"
