--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subtitle section-subtitle">Banking app</h3>
-            <p class="portfolio-subtitle subtitle-text">app</p>
+            <h3 class="portfolio-subtitle section-subtitle">Banking App</h3>
+            <p class="portfolio-subtitle subtitle-text">App</p>
           </li>
           <li>
             <img
@@ -180,7 +180,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subtitle section-subtitle">Meditation app</h3>
+            <h3 class="portfolio-subtitle section-subtitle">Meditation App</h3>
             <p class="portfolio-subtitle subtitle-text">App</p>
           </li>
           <li>
@@ -205,11 +205,11 @@
             <h3 class="portfolio-subtitle section-subtitle">
               Screen Illustrations
             </h3>
-            <p class="portfolio-subtitle subtitle-text">Desighn</p>
+            <p class="portfolio-subtitle subtitle-text">Design</p>
           </li>
           <li>
             <img
-              src="images/img-10.jpg"
+              src="./images/img-10.jpg"
               class="portfolio-img"
               alt="marketing-courses"
               width="360"
