--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section class="section-team">
         <h2 class="users-subtitle section-title">Our Team</h2>
         <ul class="users-list">
-          <li class="user-des">
+          <li class="user">
             <img
               src="./images/img_1.jpg"
               class="img-user-des"
@@ -108,7 +108,7 @@
             <h3 class="user-name section-subtitle">Mark Guerrero</h3>
             <p class="user-text subtitle-text">Product Designer</p>
           </li>
-          <li class="user-front">
+          <li class="user">
             <img
               src="./images/img_2.jpg"
               class="img-user-front"
@@ -119,7 +119,7 @@
             <h3 class="user-name section-subtitle">Tom Ford</h3>
             <p class="user-text subtitle-text">Frontend Developer</p>
           </li>
-          <li class="user-market">
+          <li class="user">
             <img
               src="./images/img_3.jpg"
               class="img-user-market"
@@ -131,7 +131,7 @@
             <p class="user-text subtitle-text">Marketing</p>
           </li>
 
-          <li class="user-ui">
+          <li class="user">
             <img
               src="./images/img_4.jpg"
               class="img-user-ui"
